--- a/src/pages/Charts.css
+++ b/src/pages/Charts.css
@@ -1,14 +1,11 @@
 .charts-container {
     border: 4px solid black;
     margin: 0px 6%;
-    height: 60%;
-    width: 900px;
+    height: 50%;
+    padding: 20px 200px 20px 200px;
+    width: 480px;
     overflow-y: scroll;
     overflow-x: hidden;
-}
-
-.polar-chart {
-
 }
 
 @media only screen and (max-width: 960px) {
